--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,5 +4,5 @@ commit = True
 tag = True
 
 [bumpversion:file:conda/tsvfmt/meta.yaml]
-search = {% set version = "{current_version}" %}
-replace = {% set version = "{new_version}" %}
+search = set version = "{current_version}"
+replace = set version = "{new_version}"
