CI: fix create release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     needs: build_and_test
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      upload_url: ${{ steps.create_gh_release.outputs.upload_url }}
     steps:
       - name: Create release
         id: create_gh_release
