CI: set release asset content type

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,7 @@ jobs:
           upload_url: ${{ needs.initialize_gh_release.outputs.upload_url }}
           asset_path: ./tsv
           asset_name: tsv_${{ matrix.executable_suffix }}
+          asset_content_type: application/octet-stream
 
   conda:
     if: "startsWith(github.ref, 'refs/tags/')"
