--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,6 @@ jobs:
     name: Build and publish a conda package
     needs: build_and_test
     strategy:
-      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
@@ -101,9 +100,6 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Add miniconda to PATH
-        run: echo "PATH=${HOME}/miniconda/bin:${PATH}" >> $GITHUB_ENV
-
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: buildenv
@@ -111,17 +107,17 @@ jobs:
           channel-priority: true
           mamba-version: "*"
 
-      - name: Setup conda
+      - name: Setup build env
         run: mamba install conda-build anaconda-client
 
       - name: Build package
-        run: |
-          mamba build conda/$(basename $GITHUB_REPOSITORY)
+        run: mamba build conda/$(basename $GITHUB_REPOSITORY)
 
-      # --use-local is not working
+      # Using local build as we didn't push the tarball to anaconda yet
+      # the --use-local flag is not working within an activated env,
+      # so using -c file://${CONDA_PREFIX}/... instead
       - name: Install package
-        run: |
-          mamba install -c file://${CONDA_PREFIX}/conda-bld/ $(basename $GITHUB_REPOSITORY)
+        run: mamba install -c file://${CONDA_PREFIX}/conda-bld/ $(basename $GITHUB_REPOSITORY)
 
       - name: Test
         run: bash -ex test/test.sh
@@ -129,4 +125,4 @@ jobs:
       - name: Upload to anaconda
         run: |
           anaconda -t ${{ secrets.ANACONDA_TOKEN }} \
-            upload ${CONDA_PREFIX}/conda-bld/**/*.tar.bz2
+          upload ${CONDA_PREFIX}/conda-bld/**/*.tar.bz2
