CI conda: use py3.8, otherwise aanconda client is not working

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,6 +106,7 @@ jobs:
           channels: vladsaveliev,conda-forge,defaults
           channel-priority: true
           mamba-version: "*"
+          python-version: 3.8  # anaconda client is not working with py3.9
 
       - name: Setup build env
         run: mamba install conda-build anaconda-client
