--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: CI
+name: Release
 on: [push, pull_request]
 
 jobs:
   build_and_test:
     # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
     if: "! startsWith(github.event.head_commit.message, 'Bump ') || startsWith(github.ref, 'refs/tags/')"
-    name: Build and run tests
+    name: Build & test
     strategy:
       fail-fast: false
       matrix:
@@ -38,9 +38,9 @@ jobs:
 
   # In a separate job w/o matrix because we don't want a release for each OS
   initialize_gh_release:
+    name: Initialize GitHub release
     # Only creating releases on tag pushes
     if: "startsWith(github.ref, 'refs/tags/')"
-    name: Initialize GitHub release
     needs: build_and_test
     runs-on: ubuntu-latest
     outputs:
@@ -56,8 +56,8 @@ jobs:
           release_name: Release ${{ github.ref }}
 
   upload_gh_assets:
+    name: Upload assets
     if: "startsWith(github.ref, 'refs/tags/')"
-    name: Publish GitHub release assets
     needs: initialize_gh_release
     strategy:
       fail-fast: false
@@ -88,7 +88,7 @@ jobs:
 
   conda:
     if: "startsWith(github.ref, 'refs/tags/')"
-    name: Build and publish a conda package
+    name: Publish conda package
     needs: build_and_test
     strategy:
       matrix:
